--- a/p8105_unp2000_hw4.Rmd
+++ b/p8105_unp2000_hw4.Rmd
@@ -1,8 +1,11 @@
 ---
-title: "p8105_unp2000_hw5"
-output: html_document
+title: "p8105_unp2000_hw4"
+author: Uma Palaniappan
+output: 
+  html_document: 
+    toc: true 
+    toc_float: true 
+    theme: cerulean
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+# This is Uma's Awesome Website 
