--- a/index.Rmd
+++ b/index.Rmd
@@ -11,6 +11,11 @@ output:
 
 You can learn a lot more about me [here](aboutme.html)
 
-# Feel free to connect with me on [linkedin](https://www.linkedin.com/in/uma-palaniappan/)
+# LinkedIn
+Feel free to connect with me on [linkedin](https://www.linkedin.com/in/uma-palaniappan/)
 
-# Check out some other projects that I've been working on my [github](https://github.com/unp2000/)
+# Github
+Check out some other projects that I've been working on my [github](https://github.com/unp2000/)
+
+# Email 
+Send me a note 
