--- a/index.Rmd
+++ b/index.Rmd
@@ -18,4 +18,4 @@ Feel free to connect with me on [linkedin](https://www.linkedin.com/in/uma-palan
 Check out some other projects that I've been working on my [github](https://github.com/unp2000/)
 
 # Email 
-Send me a note 
+Send me a note at my [email](unp2000@cumc.columbia.edu)
