adding site.yaml

--- a/aboutme.Rmd
+++ b/aboutme.Rmd
@@ -10,4 +10,5 @@ output:
 
 My name is Uma and I make websites that are cool! 
 
-I am from sunny California! 
+I was born and raised in sunny Fremont, CA and now live in Manhattan, NY where I'm studying Public Health at the Mailman School of Public Health at Columbia University. 
+
