--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ output:
     theme: cerulean
 ---
 
-#  My Professional Experience 
+# Uma Professional Experience 
 
 You can learn a lot more about me [here](aboutme.html)
 
