--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ output:
     theme: cerulean
 ---
 
-# Uma Professional Experience 
+# Uma's Professional Experience 
 
 You can learn a lot more about me [here](aboutme.html)
 
