--- a/aboutme.Rmd
+++ b/aboutme.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 
 
-My name is Uma and I make websites that are cool!
+My name is Uma and I make websites that are cool.
 
 I was born and raised in sunny Fremont, CA and now live in Manhattan, NY where I'm studying Public Health at the Mailman School of Public Health at Columbia University. 
 
