Adding Ziter Health Insights to about me page

--- a/aboutme.Rmd
+++ b/aboutme.Rmd
@@ -14,6 +14,8 @@ output:
 
 MPH in Epidemiology 
 
+Certificate in Applied Biostatistics 
+
 New York, NY 
 
 Candidate for Graduation: May 2020 
@@ -22,17 +24,13 @@ September 2018- Present
 
 
 
-
-
-
-
 **Santa Clara University**
 
 Bachelor of Science in Public Health Science and Psychology
 
-Santa Clara, CA 
-
 Minors: Biology and Psychobiology
+
+Santa Clara, CA 
 
 September 2013 - May 2017
 
@@ -48,6 +46,23 @@ Raritan, NJ, June 2019 – August 2019
 
 ●	Adapted global market access tools for Neuroscience breakthrough therapy for Major Depressive Disorder, Spravato, and incorporated internal stakeholder feedback from Global, Regional, and Local markets
 
+
+
+**Zitter Health Insights** 
+
+*Research Analyst, Policy & Access Tracking Tool* (07/17- 04/18)
+
+*Research Analyst, Product Strategies Group* (04/18- 07/18)
+
+San Francisco, CA, July 2017- July 2018
+
+●	Mastered 8+ therapeutic areas, maintaining an error rate of less than 1% and trained secondary team in Mumbai, India
+
+●	Tracked new-to-market drugs leading to widespread client distribution and account team success
+
+●	Researched prior authorization coverage criteria for different therapeutic areas for 500+ insurance payers 
+
+●	Responsible for all client deliverables in the specialty drug landscape (oncology and non-oncology) 
 
 
 
