Adding more experiences

--- a/aboutme.Rmd
+++ b/aboutme.Rmd
@@ -7,22 +7,21 @@ output:
     theme: cerulean
 ---
 
+$~$
 
 # Education: 
 
+$~$ 
+
 **Columbia University Mailman School of Public Health** 
 
-MPH in Epidemiology 
+MPH in Epidemiology, Certificate in Applied Biostatistics 
 
-Certificate in Applied Biostatistics 
-
-New York, NY 
+New York, NY, September 2018- Present 
 
 Candidate for Graduation: May 2020 
 
-September 2018- Present 
-
-
+$~$
 
 **Santa Clara University**
 
@@ -30,11 +29,13 @@ Bachelor of Science in Public Health Science and Psychology
 
 Minors: Biology and Psychobiology
 
-Santa Clara, CA 
+Santa Clara, CA, September 2013 - May 2017
 
-September 2013 - May 2017
+$~$ 
 
 # Experience: 
+
+$~$ 
 
 **The Janssen Pharmaceutical Companies of Johnson & Johnson**
 
@@ -46,7 +47,7 @@ Raritan, NJ, June 2019 – August 2019
 
 ●	Adapted global market access tools for Neuroscience breakthrough therapy for Major Depressive Disorder, Spravato, and incorporated internal stakeholder feedback from Global, Regional, and Local markets
 
-
+$~$ 
 
 **Zitter Health Insights** 
 
@@ -63,6 +64,49 @@ San Francisco, CA, July 2017- July 2018
 ●	Researched prior authorization coverage criteria for different therapeutic areas for 500+ insurance payers 
 
 ●	Responsible for all client deliverables in the specialty drug landscape (oncology and non-oncology) 
+
+$~$
+
+**Santa Clara County, Department of Health** 
+
+*Student Consultant*
+
+Santa Clara, CA, April 2017 - June 2017 
+
+●	Collaborated with a team of three students to work on our Public Health Senior Capstone Project with SCC DOH to democratize and increase access to the Diabetes Prevention Program (DPP) to its community members 
+
+●	Created deliverables for DOH and stakeholders with ROI calculations for implementing the DPP in the county 
+
+●	Participated in work groups with the DOH and collaborated with local organizations to promote and create education based campaigns to increase awareness to DPP 
+
+$~$
+
+**Neurotrack** 
+
+*Research Operations Intern* 
+
+Redwood City, CA, June 2016 - April 2017 
+
+●	Involved in market research evaluating competitor cognitive health programs while standardizing testing protocols 
+
+●	Performed UI/UX research on Neurotrack’s initial cognitive health program by assessing and deconstructing cognitive psychology principles used 
+
+●	Developed user content for Neurotrack’s website and summarized findings from company’s pilot studies 
+
+$~$ 
+
+**UCSF Dubal Lab** 
+
+*Undergraduate Researcher- Dr. Dena Dubal*
+
+San Francisco, CA, May 2016- January 2017  
+
+●	Compiled a meta-analysis of data obtained from literature about Sex Differences and Mortality in Parkinson’s, Alzheimer’s, Lewy Body Dementia, Fronto-temporal Dementia, and ALS 
+
+●	Skills gained: Cell culture, Western Blot, PCR, qPCR, Mouse Model maintenance, STATA, Graphing and Data Analysis 
+
+$~$ 
+
 
 
 
