Adding More Experiences

--- a/aboutme.Rmd
+++ b/aboutme.Rmd
@@ -107,6 +107,30 @@ San Francisco, CA, May 2016- January 2017
 
 $~$ 
 
+**Omada Health** 
+
+*Support Extension* 
+
+San Francisco, CA, August 2015 - December 2016 
+
+●	Collaborated with Omada Health’s Support Team to streamline application processes for their flagship behavioral modification program, resulting in same-day turnover for application analysis using criteria set by the CDC 
+
+●	Participated in outreach calling campaigns targeting certain demographics ranging from 18-65+
+
+$~$ 
+
+**Santa Clara University Engineering World Health- School of Engineering and Frugal Innovation Lab** 
+
+*Public Health Consultant* 
+
+Santa Clara, CA, January 2014- January 2017 
+
+●	Collaborated with Public Health students to perform public health, market, and impact research in developing countries for affordable, portable devices: an EKG and Vitals Sensor created by engineering students for their Senior Design Project 
+
+●	Synthesized constructive feedback on devices from medical and public health professionals to provide to engineering team 
+
+●	Presented Key Findings to University in order to secure funding for students to travel to these developing countries 
+
 
 
 
