Adding Leadership Experiences

--- a/aboutme.Rmd
+++ b/aboutme.Rmd
@@ -131,6 +131,24 @@ Santa Clara, CA, January 2014- January 2017
 
 ●	Presented Key Findings to University in order to secure funding for students to travel to these developing countries 
 
+$~$ 
+
+# Leadership: 
+
+**Santa Clara University Office of Undergraduate Admissions**
+
+*Student Ambassador & Leader* 
+
+Santa Clara, CA, October 2013 - June 2017 
+
+●	Communicated with prospective students and families through leading campus wide tours, student panels, and providing front desk assistance
+
+●	Oversaw 50 student employees in a team through the Student Ambassador program specializing in scheduling and outreach visits for high schools and programs throughout the country 
+
+●	Maintained relationships with 75 organizations located over 500-mile radius to advocate higher education to underrepresented high school students to the university
+
+
+
 
 
 
