--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "dashboard"
 output: 
-  flexdashboard::flex_dashboard: 
-    orientation: columns 
-      vertical_layout: fill 
+  html_document:
+    toc: true
+    toc_float: true
+    theme: cerulean
 ---
 
 ```{r setup, include=FALSE}
