--- a/index.Rmd
+++ b/index.Rmd
@@ -15,4 +15,4 @@ My name is Uma and I make websites that are cool.
 
 I was born and raised in sunny Fremont, CA and now live in Manhattan, NY where I'm studying Public Health at the Mailman School of Public Health at Columbia University. 
 
-This is me ![] ()
+This is me !
