--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -4,7 +4,7 @@ output:
   html_document:
     toc: true
     toc_float: true
-    theme: cerulean
+    theme: journal
 ---
 
 ```{r setup, include=FALSE}
